Agregar inmuebles al enlace de inmuebles, cambiar rutas

--- a/src/Components/Inicio/Inicio.css
+++ b/src/Components/Inicio/Inicio.css
@@ -12,19 +12,16 @@
 }
 
 .ver-listado {
+  display: block;
   text-align: center;
   border: 1px solid blue;
   height: 30px;
   width: 300px;
   border-radius: 40px;
   margin: 20px auto 0;
-}
-
-.ver-listado a {
   color: rgb(0, 0, 0);
   text-decoration: none;
 }
-
 .facilidad-facilidad {
   background-color: rgba(218, 225, 232, 0.195);
 }
