--- a/src/Components/Inmuebles/Inmueble.css
+++ b/src/Components/Inmuebles/Inmueble.css
@@ -12,14 +12,12 @@
   height: 200px;
 }
 .ver-mas {
+  display: block;
   text-align: center;
   background-color: rgb(26, 26, 208);
   margin: 20px;
   height: 30px;
   border-radius: 40px;
-}
-
-.ver-mas a {
   color: white;
   text-decoration: none;
 }
