--- a/src/Components/SessionMenu/SessionMenu.css
+++ b/src/Components/SessionMenu/SessionMenu.css
@@ -1,12 +1,23 @@
 /* Estilos para el contenedor principal */
 .container {
-  width: 100%;
-  height: 660px;
-  padding: 0;
+  width: 100vw;
+  height: 100vh;
   margin: 0;
-  text-align: center;
-  background-color: #367bcf;
+  padding: 0;
 }
+
+/* Estilos para el primer div arriba */
+.primer-div {
+  height: 50px;
+  background: linear-gradient(
+    to right top,
+    rgb(254, 254, 254),
+    rgb(215, 236, 250),
+    rgba(0, 136, 255, 0.721)
+  );
+  padding: 20px;
+}
+
 .connection-wallet {
   display: flex;
   flex-direction: row;
@@ -15,9 +26,8 @@
   width: 370px;
 }
 
-/*Conect wallet*/
+/* Conect wallet */
 .connect-wallet {
-  margin-top: 40px;
   margin: 0 auto;
 }
 
@@ -31,49 +41,62 @@
   background-repeat: no-repeat;
   margin: 0 auto;
 }
+
 .metamask-connect i {
   display: inline-block;
   margin-left: 40px;
 }
+
 .terminos {
   color: white;
 }
 
-/* Estilos para el primer div arriba */
-.primer-div {
-  height: 100px;
-  background-color: #367bcf;
-  color: rgb(12, 12, 12);
-  padding: 20px;
-  margin-bottom: auto;
-}
-
-.logo {
+.loga {
+  position: relative;
   float: left;
+  display: flex;
+  align-items: flex-start;
+  width: 10vw;
+  align-items: center;
 }
 
-.logo img {
+.loga img {
+  position: absolute;
+  top: -10px;
+  margin-left: 8px;
+  height: 10vh;
+}
+
+/* Estilos para el texto del logo */
+.loga h3 {
+  margin: 8px 130px;
   text-align: center;
-  margin: 0 auto;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.loga span {
+  color: blue;
 }
 
 /* Estilos para el segundo div */
 .segundo-div {
-  height: 500px;
-  width: 30%;
+  height: 85vh;
+  width: 20%; /* Cambia el ancho al 40% para dejar espacio al tercer div */
+  float: left; /* Hace que el segundo div flote a la izquierda */
   padding: 20px;
   box-sizing: border-box;
   background: linear-gradient(
-    to bottom,
-    rgb(165, 165, 165) 0%,
-    rgb(152, 152, 152) 10%,
-    #367bcf 50%,
-    #367bcf 100%
+    to right top,
+    rgb(254, 254, 254),
+    rgb(141, 208, 253),
+    rgba(185, 217, 246, 0.721),
+    rgb(254, 254, 254),
+    rgb(141, 208, 253),
+    rgba(185, 217, 246, 0.721)
   );
   background-position: right;
   background-size: 95% 100%;
   background-repeat: no-repeat;
-  border-top-left-radius: 100px;
 }
 
 button {
@@ -84,17 +107,6 @@ button {
   text-align: left;
 }
 
-.imagen {
-  display: flex;
-  align-items: center;
-  background-color: transparent;
-  border: none;
-}
-
-.imagen img {
-  margin-right: 10px;
-}
-
 .texto-menu {
   color: white;
 }
@@ -103,11 +115,26 @@ button {
   display: block;
   margin: 10px auto;
   padding: 10px 20px;
-  background-color: #021094;
-  color: white;
+  background: linear-gradient(
+    to right top,
+    rgb(254, 254, 254),
+    rgb(141, 208, 253),
+    rgba(0, 136, 255, 0.721)
+  );
+  color: rgb(0, 0, 0);
   border: none;
   cursor: pointer;
   width: 200px;
+  border-radius: 8px;
+}
+.menu-button:hover {
+  border: 2px solid white;
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+}
+/* Estilos para el botón cuando se le hace clic (ratón presionado) */
+.menu-button:active {
+  transform: scale(0.95); /* Reduce ligeramente el tamaño del botón cuando se hace clic */
+  box-shadow: none; /* Elimina la sombra cuando se hace clic */
 }
 
 .mostrar-botones-contenido {
@@ -118,34 +145,28 @@ button {
 
 /* Estilos para el tercer div */
 .tercer-div {
-  height: 500px;
-  width: 100%;
+  height: 79vh;
+  width: 98.5vw; /* Cambia el ancho al 60% para dejar espacio al segundo div */
   padding: 20px;
-  float: left;
   box-sizing: border-box;
-  background: linear-gradient(
-    to bottom,
-    rgb(165, 165, 165) 0%,
-    rgb(152, 152, 152) 10%,
-    #367bcf 50%,
-    #367bcf 100%
-  );
 }
 
-/* Estilos para limpiar el float y evitar que afecte a otros elementos */
-.clearfix::after {
-  content: "";
-  display: table;
-  clear: both;
+/* Añade margen entre los divs si lo deseas */
+.segundo-div, .tercer-div {
+  margin-right: 20px; /* Añade margen entre los divs */
 }
+
 .wallet-detalles {
   position: relative;
   border: 1px solid slateblue;
   width: 400px;
   margin: 0 auto;
 }
+
 .wallet-detalles p {
   font-size: 18px;
 }
+
 @media only screen and (max-width: 600px) {
+  /* Estilos para pantallas pequeñas */
 }
