--- a/src/Components/Inicio/Card/Card.css
+++ b/src/Components/Inicio/Card/Card.css
@@ -1,15 +1,4 @@
-.container {
-  padding: 0px 0px 5px 0px;
-}
-.container p {
-  color: #172e4a;
-  text-align: center;
-  font-family: DM Sans;
-  font-size: 28px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 42px;
-}
+
 .card {
   max-width: 900px;
   margin: 0px auto;
@@ -19,16 +8,23 @@
   flex-wrap: wrap;
   flex-direction: row;
 }
+
 .card-container {
   padding-top: 30px;
   padding-bottom: 10px;
   text-align: center;
   max-width: 150px;
-  height: 200px;
+  height: 210px;
   border-radius: 25px;
   background: #d3d3e0;
   box-shadow: 0px 10px 50px 0px rgba(0, 0, 0, 0.17);
   margin: 0 auto;
+  transition: transform 0.5s, margin 0.5s; /* Agrega una transición suave para el efecto */
+}
+
+.card-container:hover{
+  
+  margin-bottom: 20px; /* Agrega espacio inferior al hacer hover */
 }
 
 .card-container p {
@@ -37,6 +33,7 @@
   margin: 0px;
   line-height: 20px;
 }
+
 .info-info {
   max-width: 975px;
   margin: 60px auto;
